# aicreatorbootcamp

./: .env.example  .gitignore  .pre-commit-config.yaml  BRAIN-ARCHITECTURE.md  BRAIN_EVAL_RUBRIC.md  BRAIN_ROADMAP.md  BRAIN_ROUTING_INDEX.md  CLAUDE.md  PROJECT_SCORE.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
agents/: .env.example  Makefile  __init__.py  docker-compose.yml  pyproject.toml
agents/.hypothesis/constants/: 00f9db9d2831858a  0368843f6bfac6c3  205090a264d1eae6  2062862cb489cf7d  23de5748a04c379f  264c30bf09dd343d  327bbaac73700d24  38fe404527e942ce  4d42d3503052a8b4  507e76d0df32f8a2  5a3f85f1097091c0  5ece80ce80dd010e  8bf3ae05ea78821d  904ea5fb4f3dd0cd  a3ce10f8a86b12f2  b09b88968af27147  c55321ea73061b87  c9432f2e5dc9cecb  d9b4940b40afd378  da39a3ee5e6b4b0d  dbb0fbbcd939b79c  e43365f4e0323cd6  f0b8c619e1b533b1  f37ab7616be99e3a  f8b257f009a30674  f8e9a460a3a93c42
agents/api/: dependencies.py  server.py
agents/brain_builder/: brain_builder_agent.py  quality_validator.py
agents/ceo/: __init__.py  brain_selector.py  ceo_agent.py  task_decomposer.py
agents/cli/: main.py
agents/core/: base_agent.py  brain_loader.py  memory_client.py  result.py  verification.py
agents/docs/: FMEA.md  SLOs.md  incident-response.md
agents/memory/: auto_logger.py  pattern_extractor.py
agents/sandbox/: Dockerfile  README.md  docker-compose.sandbox.yml  sandbox_runner.py
agents/specialists/: __init__.py  design_agent.py  engineering_agent.py  generic_agent.py  mba_agent.py  specialist_factory.py
agents/supabase/: seed.sql
agents/supabase/migrations/: 001_initial_schema.sql  (+1 more)
agents/tests/: conftest.py  test_api.py  test_base_agent.py  test_benchmarks.py  test_brain_loader.py  test_brain_selector.py  test_ceo_agent.py  test_cli.py  test_contracts.py  test_e2e_orchestration.py  test_e2e_specialist_smoke.py  test_memory_client.py  test_properties.py  test_specialist_factory.py  test_task_decomposer.py
agents/tools/: brain_evaluator.py  project_scorer.py
(+1375 files in other folders)
